--- a/emprego.html
+++ b/emprego.html
@@ -47,6 +47,13 @@
         <img src="emprego/vagas-pcd.jpg" alt="capa do emprego">
     </div>
 
+    <script>
+       // alert("Seja Bem Vindo ao Site de Emprego");
+       // confirm("Deseja Continuar?");
+       // prompt("Digite seu Nome");
+
+    </script>
+
     
         
 </body>
